# coreLang

./: .gitignore  README.md  coreLang.cabal
.github/workflows/: haskell.yml
app/: Main.hs  Parser.hs  PrettyPrint.hs  Syntax.hs
app/Mark/: Mark1.hs  Mark2.hs  Mark3.hs  Mark4.hs
app/Mark1/: Mark1.hs  TIStats.hs
app/utils/: Heap.hs
compiler/GMachine/: G1.hs  G2.hs  G3.hs  G4.hs  G5.hs  G6.hs  G7.hs  diffG
compiler/Mark/: Mark1.hs  Mark3.hs  Mark4.hs
compiler/TIM/: TIM1.hs  TIM2.hs  TIM3.hs  TIM4.hs  TIM5.hs
compiler/utils/: Assoc.hs  Heap.hs  Heap2.hs  UsefulFuns.hs
parser/: Parser.hs  PrettyPrint.hs
prettyprint/: ISeq.hs
syntax/: Syntax.hs
test-programs/: danglingelse.cl  fail.cl  indirectionTest.cl  letrec.cl  simpl.cl
tests/: Main.hs  Mark4Test.hs  TestUtils.hs
tests/test-programs/: arithTest2.cl  arithTest3.cl  between.cl  bool.cl  compose.cl  constr.cl  fac.cl  fib.cl  gcd.cl  if1.cl  if2.cl  if3.cl  indirectionTest.cl  infiniteRec.cl  lazy.cl  legal.cl  legalre.cl  legalre2.cl  let.cl  let2.cl  letint.cl  letrec2.cl  letupd.cl  list.cl  listApp.cl  listArith.cl  listLen.cl  multiExpr.cl  multiExpr2.cl  multiExpr3.cl  negateIndirection.cl  sieve.cl  sum.cl  updTest.cl
