cabal-version:      2.4
name:               coreLang
version:            0.1.0.0

synopsis: a small compiler for the 'Core Language' by Simon Peyton Jones

description: This project is based on the book 'Implementing Functional Languages: A Tutorial' by Simon Peyton Jones


author:             Leon
maintainer:         leon.vatthauer@web.de
category:           Compiler
license:            MIT

-- source repo info
source-repository head
    type: git
    location: git://github.com/Reijix/coreLang.git

library coreLib
    exposed-modules:  Assoc,
                      Heap,
                      Heap2,
                      Mark1,
                      Mark2,
                      Mark3,
                      Mark4,
                      TIStats,
                      UsefulFuns,
                      G1,
                      G2,
                      PrettyPrint,
                      ISeq,
                      Parser,
                      Syntax
    build-depends:    base, mtl, containers
    hs-source-dirs:   compiler/Mark,
                      compiler/utils,
                      compiler/GMachine,
                      app,
                      prettyprint,
                      parser,
                      syntax
    default-language: Haskell2010

executable coreLang
    main-is:          Main.hs
    build-depends:    base,
                      optparse-applicative,
                      coreLib, containers
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite mark4-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
        TestUtils,
        Mark4Test
    hs-source-dirs: tests
    build-depends: base,
                   HUnit,
                   parser-lib,
                   compiler-lib,
                   prettyprint-lib
    default-language: Haskell2010
